# OpenGL4

./: CMakeLists.txt  README.md
include/glad/: gl.h  gl.hpp  wgl.h  wgl.hpp
src/: gl.cpp
